api/internal/logic/es/parser/guardquery_parser.go
// Code generated from GuardQuery.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // GuardQuery
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GuardQueryParser struct {
	*antlr.BaseParser
}

var GuardQueryParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func guardqueryParserInit() {
	staticData := &GuardQueryParserStaticData
	staticData.LiteralNames = []string{
		"", "'m'", "'h'", "'d'", "'$msg'", "'CURRENT_TIME'", "'CURRENT_DATE'",
		"'CURRENT_TIMESTAMP'", "'json'", "'yaml'", "';'", "'.'", "'('", "')'",
		"'['", "']'", "','", "'='", "'*'", "'+'", "'-'", "'/'", "'<'", "'<='",
		"'>'", "'>='", "'=='", "'!='", "'<>'", "'NODE'", "'PROVIDER'", "'AND'",
		"'OR'", "'NOT'", "'IN'", "'TO'", "'SELECT'", "'FROM'", "'AS'", "'WHERE'",
		"'LIMIT'", "'OFFSET'", "'ORDER'", "'BY'", "'ASC'", "'DESC'", "'TRUE'",
		"'FALSE'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR",
		"OPEN_BRA", "CLOSE_BRA", "COMMA", "ASSIGN", "STAR", "PLUS", "MINUS",
		"DIV", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", "NODE_",
		"PROVIDER_", "AND_", "OR_", "NOT_", "IN_", "TO_", "SELECT_", "FROM_",
		"AS_", "WHERE_", "LIMIT_", "OFFSET_", "ORDER_", "BY_", "ASC_", "DESC_",
		"TRUE_", "FALSE_", "IDENTIFIER", "NUMERIC_LITERAL", "STRING_LITERAL",
		"SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR",
	}
	staticData.RuleNames = []string{
		"parse", "select", "timeStmt", "absTimeStmt", "relatTimeStmt", "timeUnit",
		"whereStmt", "sourceOrSubquery", "source", "node", "provider", "providerArg",
		"resultColumn", "resultAlias", "anyName", "boolExpr", "valueExpr", "buildinSource",
		"buildinFunction", "literalValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GuardQueryParserInit initializes any static state used to implement GuardQueryParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGuardQueryParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GuardQueryParserInit() {
	staticData := &GuardQueryParserStaticData
	staticData.once.Do(guardqueryParserInit)
}

// NewGuardQueryParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGuardQueryParser(input antlr.TokenStream) *GuardQueryParser {
	GuardQueryParserInit()
	this := new(GuardQueryParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GuardQueryParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "GuardQuery.g4"

	return this
}

// GuardQueryParser tokens.
const (
	GuardQueryParserEOF                 = antlr.TokenEOF
	GuardQueryParserT__0                = 1
	GuardQueryParserT__1                = 2
	GuardQueryParserT__2                = 3
	GuardQueryParserT__3                = 4
	GuardQueryParserT__4                = 5
	GuardQueryParserT__5                = 6
	GuardQueryParserT__6                = 7
	GuardQueryParserT__7                = 8
	GuardQueryParserT__8                = 9
	GuardQueryParserSCOL                = 10
	GuardQueryParserDOT                 = 11
	GuardQueryParserOPEN_PAR            = 12
	GuardQueryParserCLOSE_PAR           = 13
	GuardQueryParserOPEN_BRA            = 14
	GuardQueryParserCLOSE_BRA           = 15
	GuardQueryParserCOMMA               = 16
	GuardQueryParserASSIGN              = 17
	GuardQueryParserSTAR                = 18
	GuardQueryParserPLUS                = 19
	GuardQueryParserMINUS               = 20
	GuardQueryParserDIV                 = 21
	GuardQueryParserLT                  = 22
	GuardQueryParserLT_EQ               = 23
	GuardQueryParserGT                  = 24
	GuardQueryParserGT_EQ               = 25
	GuardQueryParserEQ                  = 26
	GuardQueryParserNOT_EQ1             = 27
	GuardQueryParserNOT_EQ2             = 28
	GuardQueryParserNODE_               = 29
	GuardQueryParserPROVIDER_           = 30
	GuardQueryParserAND_                = 31
	GuardQueryParserOR_                 = 32
	GuardQueryParserNOT_                = 33
	GuardQueryParserIN_                 = 34
	GuardQueryParserTO_                 = 35
	GuardQueryParserSELECT_             = 36
	GuardQueryParserFROM_               = 37
	GuardQueryParserAS_                 = 38
	GuardQueryParserWHERE_              = 39
	GuardQueryParserLIMIT_              = 40
	GuardQueryParserOFFSET_             = 41
	GuardQueryParserORDER_              = 42
	GuardQueryParserBY_                 = 43
	GuardQueryParserASC_                = 44
	GuardQueryParserDESC_               = 45
	GuardQueryParserTRUE_               = 46
	GuardQueryParserFALSE_              = 47
	GuardQueryParserIDENTIFIER          = 48
	GuardQueryParserNUMERIC_LITERAL     = 49
	GuardQueryParserSTRING_LITERAL      = 50
	GuardQueryParserSINGLE_LINE_COMMENT = 51
	GuardQueryParserMULTILINE_COMMENT   = 52
	GuardQueryParserSPACES              = 53
	GuardQueryParserUNEXPECTED_CHAR     = 54
)

// GuardQueryParser rules.
const (
	GuardQueryParserRULE_parse            = 0
	GuardQueryParserRULE_select           = 1
	GuardQueryParserRULE_timeStmt         = 2
	GuardQueryParserRULE_absTimeStmt      = 3
	GuardQueryParserRULE_relatTimeStmt    = 4
	GuardQueryParserRULE_timeUnit         = 5
	GuardQueryParserRULE_whereStmt        = 6
	GuardQueryParserRULE_sourceOrSubquery = 7
	GuardQueryParserRULE_source           = 8
	GuardQueryParserRULE_node             = 9
	GuardQueryParserRULE_provider         = 10
	GuardQueryParserRULE_providerArg      = 11
	GuardQueryParserRULE_resultColumn     = 12
	GuardQueryParserRULE_resultAlias      = 13
	GuardQueryParserRULE_anyName          = 14
	GuardQueryParserRULE_boolExpr         = 15
	GuardQueryParserRULE_valueExpr        = 16
	GuardQueryParserRULE_buildinSource    = 17
	GuardQueryParserRULE_buildinFunction  = 18
	GuardQueryParserRULE_literalValue     = 19
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SCOL() antlr.TerminalNode
	Select_() ISelectContext

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) SCOL() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserSCOL, 0)
}

func (s *ParseContext) Select_() ISelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *GuardQueryParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GuardQueryParserRULE_parse)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Select_()
	}

	{
		p.SetState(41)
		p.Match(GuardQueryParserSCOL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISelectContext is an interface to support dynamic dispatch.
type ISelectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SELECT_() antlr.TerminalNode
	AllResultColumn() []IResultColumnContext
	ResultColumn(i int) IResultColumnContext
	FROM_() antlr.TerminalNode
	AllSourceOrSubquery() []ISourceOrSubqueryContext
	SourceOrSubquery(i int) ISourceOrSubqueryContext
	IN_() antlr.TerminalNode
	TimeStmt() ITimeStmtContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode
	WHERE_() antlr.TerminalNode
	WhereStmt() IWhereStmtContext

	// IsSelectContext differentiates from other interfaces.
	IsSelectContext()
}

type SelectContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectContext() *SelectContext {
	var p = new(SelectContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_select
	return p
}

func InitEmptySelectContext(p *SelectContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_select
}

func (*SelectContext) IsSelectContext() {}

func NewSelectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectContext {
	var p = new(SelectContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_select

	return p
}

func (s *SelectContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectContext) SELECT_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserSELECT_, 0)
}

func (s *SelectContext) AllResultColumn() []IResultColumnContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IResultColumnContext); ok {
			len++
		}
	}

	tst := make([]IResultColumnContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IResultColumnContext); ok {
			tst[i] = t.(IResultColumnContext)
			i++
		}
	}

	return tst
}

func (s *SelectContext) ResultColumn(i int) IResultColumnContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResultColumnContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResultColumnContext)
}

func (s *SelectContext) FROM_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserFROM_, 0)
}

func (s *SelectContext) AllSourceOrSubquery() []ISourceOrSubqueryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISourceOrSubqueryContext); ok {
			len++
		}
	}

	tst := make([]ISourceOrSubqueryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISourceOrSubqueryContext); ok {
			tst[i] = t.(ISourceOrSubqueryContext)
			i++
		}
	}

	return tst
}

func (s *SelectContext) SourceOrSubquery(i int) ISourceOrSubqueryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceOrSubqueryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceOrSubqueryContext)
}

func (s *SelectContext) IN_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserIN_, 0)
}

func (s *SelectContext) TimeStmt() ITimeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITimeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITimeStmtContext)
}

func (s *SelectContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(GuardQueryParserCOMMA)
}

func (s *SelectContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(GuardQueryParserCOMMA, i)
}

func (s *SelectContext) WHERE_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserWHERE_, 0)
}

func (s *SelectContext) WhereStmt() IWhereStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhereStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhereStmtContext)
}

func (s *SelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterSelect(s)
	}
}

func (s *SelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitSelect(s)
	}
}

func (p *GuardQueryParser) Select_() (localctx ISelectContext) {
	localctx = NewSelectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GuardQueryParserRULE_select)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(GuardQueryParserSELECT_)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(44)
		p.ResultColumn()
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GuardQueryParserCOMMA {
		{
			p.SetState(45)
			p.Match(GuardQueryParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(46)
			p.ResultColumn()
		}

		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(52)
		p.Match(GuardQueryParserFROM_)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.SourceOrSubquery()
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GuardQueryParserCOMMA {
		{
			p.SetState(54)
			p.Match(GuardQueryParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(55)
			p.SourceOrSubquery()
		}

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(61)
		p.Match(GuardQueryParserIN_)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(62)
		p.TimeStmt()
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GuardQueryParserWHERE_ {
		{
			p.SetState(63)
			p.Match(GuardQueryParserWHERE_)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(64)
			p.WhereStmt()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITimeStmtContext is an interface to support dynamic dispatch.
type ITimeStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AbsTimeStmt() IAbsTimeStmtContext
	RelatTimeStmt() IRelatTimeStmtContext

	// IsTimeStmtContext differentiates from other interfaces.
	IsTimeStmtContext()
}

type TimeStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTimeStmtContext() *TimeStmtContext {
	var p = new(TimeStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_timeStmt
	return p
}

func InitEmptyTimeStmtContext(p *TimeStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_timeStmt
}

func (*TimeStmtContext) IsTimeStmtContext() {}

func NewTimeStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TimeStmtContext {
	var p = new(TimeStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_timeStmt

	return p
}

func (s *TimeStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *TimeStmtContext) AbsTimeStmt() IAbsTimeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAbsTimeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAbsTimeStmtContext)
}

func (s *TimeStmtContext) RelatTimeStmt() IRelatTimeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelatTimeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelatTimeStmtContext)
}

func (s *TimeStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TimeStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TimeStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterTimeStmt(s)
	}
}

func (s *TimeStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitTimeStmt(s)
	}
}

func (p *GuardQueryParser) TimeStmt() (localctx ITimeStmtContext) {
	localctx = NewTimeStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GuardQueryParserRULE_timeStmt)
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case GuardQueryParserSTRING_LITERAL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(67)
			p.AbsTimeStmt()
		}

	case GuardQueryParserMINUS:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(68)
			p.RelatTimeStmt()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAbsTimeStmtContext is an interface to support dynamic dispatch.
type IAbsTimeStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSTRING_LITERAL() []antlr.TerminalNode
	STRING_LITERAL(i int) antlr.TerminalNode
	TO_() antlr.TerminalNode

	// IsAbsTimeStmtContext differentiates from other interfaces.
	IsAbsTimeStmtContext()
}

type AbsTimeStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAbsTimeStmtContext() *AbsTimeStmtContext {
	var p = new(AbsTimeStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_absTimeStmt
	return p
}

func InitEmptyAbsTimeStmtContext(p *AbsTimeStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_absTimeStmt
}

func (*AbsTimeStmtContext) IsAbsTimeStmtContext() {}

func NewAbsTimeStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AbsTimeStmtContext {
	var p = new(AbsTimeStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_absTimeStmt

	return p
}

func (s *AbsTimeStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *AbsTimeStmtContext) AllSTRING_LITERAL() []antlr.TerminalNode {
	return s.GetTokens(GuardQueryParserSTRING_LITERAL)
}

func (s *AbsTimeStmtContext) STRING_LITERAL(i int) antlr.TerminalNode {
	return s.GetToken(GuardQueryParserSTRING_LITERAL, i)
}

func (s *AbsTimeStmtContext) TO_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserTO_, 0)
}

func (s *AbsTimeStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AbsTimeStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AbsTimeStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterAbsTimeStmt(s)
	}
}

func (s *AbsTimeStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitAbsTimeStmt(s)
	}
}

func (p *GuardQueryParser) AbsTimeStmt() (localctx IAbsTimeStmtContext) {
	localctx = NewAbsTimeStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GuardQueryParserRULE_absTimeStmt)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.Match(GuardQueryParserSTRING_LITERAL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GuardQueryParserTO_ {
		{
			p.SetState(72)
			p.Match(GuardQueryParserTO_)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(73)
			p.Match(GuardQueryParserSTRING_LITERAL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
